--- a/API-Veiculo/src/main/resources/application.yml
+++ b/API-Veiculo/src/main/resources/application.yml
@@ -1,1 +1,20 @@
+server:
+  servlet:
+    context-path: /tinnova/api
 
+    
+spring:
+  datasource:
+    url: jdbc:h2:mem:demodb
+    username: sa
+    password: 
+    driver-class-name: org.h2.Driver
+
+springdoc:
+  swagger-ui:
+    path: /swagger
+h2:
+  console:
+    enable: true
+    path: /h2-console
+    
